--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "gd-bmp": "^1.2.4",
     "jquery": "^3.2.1",
     "koa": "^2.3.0",
+    "koa-body": "^2.5.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
     "koa-flash-simple": "^0.0.3",
     "koa-logger": "^3.0.0",
+    "koa-multer": "^1.0.2",
     "koa-mysql-session": "^0.0.2",
     "koa-router": "^7.0.1",
     "koa-session": "^3.0.4",
